# BBK_Sequence-similarity-alignment-and-phylogeny

./: Initial_Notes.ipynb  LICENSE  README.md  Untitled-1.py  pyproject.toml  requirements.txt
data/: dog_breeds_short.fa
docs/: similarity_checker_documentation.md
results/final/: consensus_tree.xml  database_mulitpleseq_alignment.clustal  similarity_alignment.csv  similarity_alignment_raw_scores.csv  similarity_alignment_statistical_test.csv
results/temp/: database_mulitpleseq_alignment.clustal  dog_reference_database.csv
src/: Untitled-1.py  similarity_checker.py
tests/: TEST.py  test_similarity_checker_init.py  test_similarity_checker_karlin_altschul.py  test_similarity_checker_parent_class.py  test_similarity_checker_phylogeny.py
tests/test_reference/: consensus_tree.xml  database_mulitpleseq_alignment.clustal  similarity_alignment_raw_scores.csv  similarity_alignment_statistical_test.csv
tests/test_scripts/: test_similarity_checker_alignment.py  test_similarity_checker_init.py  test_similarity_checker_karlin_altschul.py  test_similarity_checker_parent_class.py  test_similarity_checker_phylogeny.py
tests/test_seq/: test_seq.fasta
