[build-system]
required = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DogBreed_Package_Sophie_Allen"
version = "0.0.1"
authors = [
    { name = "Sophie Allen", email = "sallen10@student.bbk.ac.uk" },
]
description = "A package designed to identify the most similar sequence to your unknown sequence"
readme = "README.md"
requires-python = ">3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independant",
]

[project.urls]
"Homepage" = "https://github.com/sparrow-rose/DogBreed_Project_2023"